--- a/themes/benamer/Gemfile
+++ b/themes/benamer/Gemfile
@@ -5,3 +5,4 @@ gem 'compass', '~>1.0'
 gem 'breakpoint', '~>2.4'
 gem 'singularitygs', '~>1.4'
 gem 'toolkit', '~>2.0'
+gem 'font-awesome-sass', '~>4.3.0'
