--- a/themes/benamer/Gemfile
+++ b/themes/benamer/Gemfile
@@ -6,3 +6,4 @@ gem 'breakpoint', '~>2.4'
 gem 'singularitygs', '~>1.4'
 gem 'toolkit', '~>2.0'
 gem 'font-awesome-sass', '~>4.3.0'
+gem 'compass-normalize','~>1.5'
